add PATCH & DELETE handlers with Swagger docs
