# openapi/openapi.yaml
@@ -37,9 +37,10 @@ paths:
                 $ref: '#/components/schemas/Task'
   /tasks/{id}:
     delete:
-      summary: Удалить задачу
-      description: Удаляет задачу по `id`
-      operationId: deleteTask
+      summary: Delete task
+      tags:
+        - tasks
+      operationId: DeleteTasks
       parameters:
         - name: id
           in: path
@@ -48,14 +49,15 @@ paths:
             type: integer
       responses:
         "204":
-          description: Успешное удаление
+          description: Successful delete
         "404":
-          description: Задача не найдена
+          description: Task not found
 
     patch:
-      summary: Обновить задачу
-      description: Частичное обновление задачи (например, `is_done`)
-      operationId: updateTask
+      summary: Update task
+      tags:
+        - tasks
+      operationId: PatchTasks
       parameters:
         - name: id
           in: path
@@ -75,13 +77,13 @@ paths:
                   type: boolean
       responses:
         "200":
-          description: Задача обновлена
+          description: Task updated
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Task"
         "404":
-          description: Задача не найдена
+          description: Task not found
 
 components:
   schemas:
